Se agrega primera parte sin soporte para telefono

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="Css/areaInformativa/areaInformativa1.css">
     <link rel="stylesheet" href="Css/header.css">
     <link rel="stylesheet" href="Css/home.css">
+    <link rel="stylesheet" href="Css/home-Cell.css">
     <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/configuracion.css">
 
@@ -35,17 +36,18 @@
     <!-- Header -->
     <!-- Banner -->
     <header id="header" class="header"></header>
-    <div id="sect"></div>
+    <div id="sect" class="sect"></div>
+
 
     <!--SECCIÓN KAREN VALDES-->
     <!-- Sección informativa -->
     <!-- Esquema -->
     <!-- Piramide -->
-    <div id="Info" class="Info"></div>
+    <!--<div id="Info" class="Info"></div>
 
-    <!--CONEXIÓN BRYAN HERNÁNDEZ-->
-    <!-- footer -->
-    <div id="footer"></div>
+    CONEXIÓN BRYAN HERNÁNDEZ-->
+    <!-- footer 
+    <div id="footer"></div>-->
 
     <!--CONEXIÓN JS-->
     <script src="./Js/main.js" type="module"></script>
