Se agrega mas código

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <!-- Sección informativa -->
     <!-- Esquema -->
     <!-- Piramide -->
-    <!--<div id="Info" class="Info"></div>
+    <div id="Info" class="Info"></div>
 
-    CONEXIÓN BRYAN HERNÁNDEZ-->
-    <!-- footer 
-    <div id="footer"></div>-->
+    <!--CONEXIÓN BRYAN HERNÁNDEZ-->
+    <!-- footer--> 
+    <div id="footer"></div>
 
     <!--CONEXIÓN JS-->
     <script src="./Js/main.js" type="module"></script>
