--- a/index.html
+++ b/index.html
@@ -66,18 +66,31 @@
                     <img  class="img_personaje" src="./img/personaje de la pared 1.png" alt="">
                 </div>
              </div>
-             <div class="dos_cuadros">
-                
+            </section>
+        <section class="dos_cuadros">
                 <div class="padreFooter">
                     <div class="cuadro">
                      <div class="cuadro_barra">
-                         <h2 class="cuadro_titulo">¿cómo funciona?</h2>
+                         <h2 class="cuadrover_titulo1">¿Cómo funciona?</h2>
+                    </div>
                          <p class="cuadro_parrafo">En la alla de Guatemala se representan seis grupos de alimentos basicos , asi como la frecunacia de consumo aconsejada, de consumo aconsejada, tanto diaria como semanal,
                          de cada uno de 
                              ellos todos los dias.
                          </p>
-             </div>
-            </section>
+                </div>
+                <div class="cuadrover">
+                    <ul class="lista">
+                        <li><a id="inicio" class="hijoOption">• Granos (llegumbre), cereales y papas (patatas)</a></li>
+                        <li><a class="hijoOption">• Hierbas y verduras</a></li>
+                        <li><a class="hijoOption">• Frutas por lo menos, 1 vez/semana</a></li>
+                        <li><a class="hijoOption">• Carnes por lo menos, 2 veces/semana</a></li>
+                        <li><a class="hijoOption">• leche y derivados con moderación</a></li>
+                        <li><a class="hijoOption">• azúcar  y grasas </a></li>
+                   </ul>
+                </div>
+        </section>
+    </div>
+            
 
 
     <!--CONEXIÓN JS-->
