Se agrega lo primero de cell

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <title>Pruebaa</title>
 
     <!--LINKS CSS-->
-    <link rel="stylesheet" href="Css/areaInformativa/areaInformativa-Cell.css">
-    <link rel="stylesheet" href="Css/areaInformativa/areaInformativa1.css">
     <link rel="stylesheet" href="Css/header.css">
     <link rel="stylesheet" href="Css/home.css">
-    <link rel="stylesheet" href="Css/home-Cell.css">
+    <link rel="stylesheet" href="./Css/areaInformativa1.css">
     <link rel="stylesheet" href="Css/footer.css">
     <link rel="stylesheet" href="Css/configuracion.css">
 
@@ -55,19 +53,3 @@
     <script src="./Js/main.js" type="module"></script>
 </body>
 </html>
-
-<!--        
-                 
-              <div class="cuadrover">
-                 <div class="cuadrover_titulo1">
-                 <ul>
-                 <li><a id="inicio" class="hijoOption">Granos (llegumbre), cereales y papas (patatas)</a></li>
-                     <li><a class="hijoOption">Hierbas y verduras</a></li>
-                     <li><a class="hijoOption">Frutas por lo menos, 1 vez/semana</a></li>
-                     <li><a class="hijoOption">Carnes por lo menos, 2 veces/semana</a></li>
-                     <li><a class="hijoOption">leche y derivados con moderación</a></li>
-                     <li><a class="hijoOption">azúcar  y grasas </a></li>
-                </ul>
-             </div>
-             </div>
-            </div>-->
