--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                 <p class="parrafo2">
                     Es un instrumento para orientar a la población sobre cómo nutrirse saludablemente, es una de las guías alimentarias. En el caso de Guatemala, las recomendaciones se resumen en la figura de una olla. La olla alimentaria posee 6 niveles de alimentos, en donde podemos encontrar los alimentos que se cultivan en Guatemala y el por qué es importante comerlas con frecuencia.
                 </p>
-                <img class="ImgFrente img2_visible" src="./img/Olla-alimentaria.png" alt="">
+                <div class="img2_visible">
+                    <img class="ImgFrente img2V" src="./img/Olla-alimentaria.png" alt="">
+                </div>
             </div>
             </div>
     </div>
