--- a/proteínas.html
+++ b/proteínas.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pruebaa</title>
+    <title>PruebaProteinas</title>
 
     <!--LINKS CSS-->
-    <link rel="stylesheet" href="Css/header.css">
-    <link rel="stylesheet" href="Css/home.css">
-    <link rel="stylesheet" href="./Css/areaInformativa1.css">
-    <link rel="stylesheet" href="Css/infoOlla.css">
+    <link rel="stylesheet" href="Css/para_header.css">
+    <link rel="stylesheet" href="Css/infoProteinas.css">
     <link rel="stylesheet" href="Css/configuracion.css">
 
 
@@ -32,14 +30,11 @@
 
     <!--SECCÓN YASMIN ANTONIO-->
     <!-- Header -->
-    <!-- Banner -->
-    <div id="sect" class="sect"></div>
+    <div id="header" class="header"></div>
 
     <!--SECCIÓN KAREN VALDES-->
     <!-- Sección informativa -->
-    <!-- Esquema -->
-    <!-- Piramide -->
-    <div id="Info" class="Info"></div>
+    <div id="Info_Pro" class="Info_Pro"></div>
 
     <!--CONEXIÓN BRYAN HERNÁNDEZ-->
     <!-- footer--> 
@@ -48,6 +43,6 @@
 
 
     <!--CONEXIÓN JS-->
-    <script src="./Js/main.js" type="module"></script>
+    <script src="./Js/proteinas.js" type="module"></script>
 </body>
 </html>
