--- a/proteínas.html
+++ b/proteínas.html
@@ -9,6 +9,8 @@
     <!--LINKS CSS-->
     <link rel="stylesheet" href="Css/para_header.css">
     <link rel="stylesheet" href="Css/infoProteinas.css">
+    <link rel="stylesheet" href="Css/videoProteinas.css">
+    <link rel="stylesheet" href="Css/paraAlimetosPro.css">
     <link rel="stylesheet" href="Css/configuracion.css">
 
 
@@ -32,17 +34,22 @@
     <!-- Header -->
     <div id="header" class="header"></div>
 
-    <!--SECCIÓN KAREN VALDES-->
+    <!--CONEXIÓN BRYAN HERNÁNDEZ-->
     <!-- Sección informativa -->
+    <!--CONEXIÓN BRYAN HERNÁNDEZ-->
+    <!-- Sección de video -->
     <div id="Info_Pro" class="Info_Pro"></div>
 
-    <!--CONEXIÓN BRYAN HERNÁNDEZ-->
     <!-- footer--> 
-    <div id="footer"></div>
+    <div id="footer">
+        <section class="alimentosP">
+            <div class="ConoceP"><h1 class="titulo">Conoce algunos alimentos ricos en proteína</h1></div>
+        </section>
+    </div>
             
 
 
     <!--CONEXIÓN JS-->
-    <script src="./Js/proteinas.js" type="module"></script>
+    <script src="./Js/proteina.js" type="module"></script>
 </body>
 </html>
